--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<script src="settings.js"></script>
 		<script src="entities.js"></script>
 		<script src="rendering.js"></script>
 	</head>
