Added simple data processing methods

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 		<script src="settings.js"></script>
 		<script src="entities.js"></script>
 		<script src="rendering.js"></script>
+		<script src="data_processing.js"></script>
 	</head>
 	<body>
 	</body>
