--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script src="settings.js"></script>
+		<script src="data_loader.js"></script>
 		<script src="entities.js"></script>
 		<script src="rendering.js"></script>
 		<script src="data_processing.js"></script>
