modifications to allow code to be run without skatemetric backend. Data recovered from web archive circa 2020

--- a/main.html
+++ b/main.html
@@ -5,7 +5,8 @@
 		<script src="entities.js"></script>
 		<script src="rendering.js"></script>
 		<script src="data_processing.js"></script>
+		<script src="jquery.js"></script>
+		<script src="main.js"></script>
 	</head>
-	<body>
-	</body>
+	<body style="background-color:black;"></body>
 </html>
